[package]
name = "anylist"
version = "0.6.4"
edition = "2021"

rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a list type for any type"
repository = "https://github.com/jjmartinodev/anylist"
keywords = ["any","list"]
categories = ["data-structures"]